--- a/src/components/com_kunena/language/es-ES/es-ES.com_kunena.controllers.ini
+++ b/src/components/com_kunena/language/es-ES/es-ES.com_kunena.controllers.ini
@@ -46,7 +46,7 @@ COM_KUNENA_FORUM = "Foro"
 COM_KUNENA_POLL_CREATED = "Encuesta creada correctamente"
 COM_KUNENA_POLL_DELETED = "Encuesta borrada correctamente"
 COM_KUNENA_POLL_EDITED = "Encuesta editada correctamente"
-COM_KUNENA_POST_FAVORITED_TOPIC = "Este hilo ha sido añadido a sus favoritos."
+COM_KUNENA_POST_FAVORITED_TOPIC = "Este tema ha sido agregado a sus favoritos."
 COM_KUNENA_POST_LOCK_NOT_SET = "El tema no se puede cerrar."
 COM_KUNENA_POST_LOCK_NOT_UNSET = "El tema no se puede abrir nuevamente."
 COM_KUNENA_POST_LOCK_UNSET = "El tema ha sido abierto nuevamente."
@@ -74,8 +74,8 @@ COM_KUNENA_REPORT_RMESSAGE = "Mensaje Reportado:"
 COM_KUNENA_REPORT_RREASON = "Razón del Reporte:"
 COM_KUNENA_REPORT_RSENDER = "Remitente del Reporte:"
 COM_KUNENA_REPORT_SUCCESS = "El reporte se ha enviado correctamente!"
-COM_KUNENA_THANKYOU_REMOVED_SUCCESS = "Gracias eliminadas correctamente"
-COM_KUNENA_THANKYOU_SUCCESS = "Ya has dado las gracias en este mensaje"
+COM_KUNENA_THANKYOU_REMOVED_SUCCESS = "Gracias eliminada correctamente"
+COM_KUNENA_THANKYOU_SUCCESS = "Diste las gracias por este mensaje."
 COM_KUNENA_TOPIC_SUCCESS_DELETE = "El tema ha sido eliminado correctamente."
 COM_KUNENA_TOPIC_SUCCESS_UNDELETE = "El mensaje se ha restaurado correctamente"
 COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "¡Has cambiado tu voto!"
