--- a/src/components/com_kunena/language/es-ES/es-ES.com_kunena.ini
+++ b/src/components/com_kunena/language/es-ES/es-ES.com_kunena.ini
@@ -177,12 +177,12 @@ COM_KUNENA_BUTTON_MESSAGE_QUOTE = "Citar"
 COM_KUNENA_BUTTON_MESSAGE_QUOTE_LONG = "Citar mensaje."
 COM_KUNENA_BUTTON_MESSAGE_REPLY = "Responder"
 COM_KUNENA_BUTTON_MESSAGE_REPLY_LONG = "Responder mensaje."
-COM_KUNENA_BUTTON_MESSAGE_REPORT = "Reportar a un moderador"
-COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG = "Reportar mensaje a un moderador."
+COM_KUNENA_BUTTON_MESSAGE_REPORT = "Reportar esto"
+COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG = "Reportar este mensaje a los Moderadores"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU = "Gracias"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG = "Dar las gracias por este mensaje."
-COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Desagradecer"
-COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "Quiero unthank le de este mensaje."
+COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU = "Eliminar Gracias"
+COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG = "Quiero eliminar las gracias de este mensaje."
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE = "Restaurar"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG = "Restaurar mensaje."
 COM_KUNENA_BUTTON_SECTION_MARKREAD = "Marcar todas las categorias como leidas."
