--- a/src/components/com_kunena/language/fi-FI/fi-FI.com_kunena.ini
+++ b/src/components/com_kunena/language/fi-FI/fi-FI.com_kunena.ini
@@ -423,7 +423,7 @@ COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Hyvä"
 COM_KUNENA_TOPIC_RATING_MEH = "Keskiverto"
 COM_KUNENA_TOPIC_RATING_KINDABAD = "Huono"
 COM_KUNENA_TOPIC_RATING_SUCKS = "Todella huono"
-; COM_KUNENA_RATE_LOGIN = "You need to be logged in to rate topic"
+COM_KUNENA_RATE_LOGIN = "Sinun täytyy olla kirjautuneena arvostellaksesi aihetta."
 COM_KUNENA_RATE_NOT_YOURSELF = "Et voi antaa arvosanaa omalle aiheellesi"
 COM_KUNENA_RATE_ALLREADY = "Olet jo äänestänyt tätä aihetta"
 COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "Äänesi on tallennettu onnistuneesti"
