--- a/src/components/com_kunena/language/it-IT/it-IT.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/it-IT/it-IT.com_kunena.templates.ini
@@ -598,7 +598,7 @@ COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Nero"
 ; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Mostra menù"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Mostra menù sul forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Display modules"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Mostra moduli"
 ; COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Display modules on the forum"
 ; COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Display breadcrumbs"
 ; COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Display breadcrumbs on the forum"
@@ -607,9 +607,9 @@ COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Mostra menù sul forum"
 ; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
 ; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
 COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Mostra video"
-; COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
-; COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Mostra video nell'editor"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Mostra mappe"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Mostra mappe nell'editor"
 ; COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
 ; COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Show emoticons on editor"
 ; COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Show twitter"
@@ -618,8 +618,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Mostra video"
 ; COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Show ebay on editor"
 ; COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Show link"
 ; COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Show link on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Show picture"
-; COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Show picture on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Mostra foto"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Mostra foto nell'editor"
 ; COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Show hide"
 ; COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Show hide on editor"
 ; COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Show spoiler"
@@ -641,7 +641,7 @@ COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Mostra video"
 ; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
 ; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
 ; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and text"
-; COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
+COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Scrivi"
 ; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Display Social Share"
 ; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Needs fontawesome for the icons"
 ; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Social Theme"
