--- a/src/components/com_kunena/language/ro-RO/ro-RO.com_kunena.ini
+++ b/src/components/com_kunena/language/ro-RO/ro-RO.com_kunena.ini
@@ -423,7 +423,7 @@ COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Bine"
 COM_KUNENA_TOPIC_RATING_MEH = "Mediu"
 COM_KUNENA_TOPIC_RATING_KINDABAD = "Rău"
 COM_KUNENA_TOPIC_RATING_SUCKS = "Foarte rău"
-; COM_KUNENA_RATE_LOGIN = "You need to be logged in to rate topic"
+COM_KUNENA_RATE_LOGIN = "Trebuie să fii conectat pentru a evalua acest subiect"
 COM_KUNENA_RATE_NOT_YOURSELF = "Nu-ți poți cataloga propriul subiect"
 COM_KUNENA_RATE_ALLREADY = "Ai evaluat deja acest subiect"
 COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "Evaluarea ta a fost salvată cu succes"
