--- a/src/components/com_kunena/language/fi-FI/fi-FI.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/fi-FI/fi-FI.com_kunena.templates.ini
@@ -24,8 +24,8 @@ COM_KUNENA_ICON_SMILE = "Hymyilee"
 COM_KUNENA_ICON_SOLVED = "Ratkaistu"
 COM_KUNENA_TEMPLATE_LABELS="Näytä nimiöt"
 COM_KUNENA_TEMPLATE_LABELS_DESC="Näytä nimiöt aihe-rivillä"
-COM_KUNENA_TEMPLATE_PROFILE_TYPE="Avatar tyyppi"
-COM_KUNENA_TEMPLATE_PROFILE_TYPE_DESC="Valitse Avatar -tyyppi"
+COM_KUNENA_TEMPLATE_PROFILE_TYPE="Hahmokuvan tyyppi"
+COM_KUNENA_TEMPLATE_PROFILE_TYPE_DESC="Valitse hahmokuvan tyyppi"
 COM_KUNENA_TEMPLATE_ROUNDED="Pyöristetty"
 COM_KUNENA_TEMPLATE_CIRCLE="Ympyrä"
 COM_KUNENA_TEMPLATE_THUMBNAIL="Thumbnail"
@@ -233,8 +233,8 @@ COM_KUNENA_PROFILE_EDIT_AVATAR = "Hahmokuva"
 COM_KUNENA_PROFILE_EDIT_AVATAR_TITLE = "Vaihda hahmokuva"
 COM_KUNENA_PROFILE_EDIT_PROFILE = "Profiilitiedot"
 COM_KUNENA_PROFILE_EDIT_PROFILE_TITLE = "Muokkaa profiilitietoja"
-COM_KUNENA_PROFILE_EDIT_SETTINGS = "Foorumi asetukset"
-COM_KUNENA_PROFILE_EDIT_SETTINGS_TITLE = "Muokkaa foorumi asetuksia"
+COM_KUNENA_PROFILE_EDIT_SETTINGS = "Foorumiasetukset"
+COM_KUNENA_PROFILE_EDIT_SETTINGS_TITLE = "Muokkaa foorumiasetuksia"
 COM_KUNENA_PROFILE_EDIT_USER = "Käyttäjätili"
 COM_KUNENA_PROFILE_EDIT_USER_TITLE = "Muokkaa käyttäjätietoja"
 COM_KUNENA_QMESSAGE_NOTE = "Huom: BBcodet ja hymiöt ovat edelleen käyttökelpoisia."
@@ -402,7 +402,7 @@ COM_KUNENA_MYPROFILE_DIGG_DESC = "Digg käyttäjätunnus."
 COM_KUNENA_MYPROFILE_EDIT_KUNENA = "Muokkaa profiilitietoja"
 COM_KUNENA_MYPROFILE_FACEBOOK_DESC = "Facebook käyttäjätunnus."
 COM_KUNENA_MYPROFILE_FLICKR_DESC = "Flickr käyttäjätunnus."
-COM_KUNENA_MYPROFILE_FORUM_SETTINGS = "Foorumi asetukset"
+COM_KUNENA_MYPROFILE_FORUM_SETTINGS = "Foorumiasetukset"
 COM_KUNENA_MYPROFILE_FRIENDFEED_DESC = "FriendFeed käyttäjätunnus."
 COM_KUNENA_MYPROFILE_GTALK_DESC = "Gtalk käyttäjätunnus."
 COM_KUNENA_MYPROFILE_ICQ_DESC = "ICQ numero."
@@ -419,7 +419,7 @@ COM_KUNENA_MYPROFILE_MY_SUBSCRIBES = "Seurannat"
 COM_KUNENA_MYPROFILE_NEW_MESSAGE = "Uusi viesti"
 COM_KUNENA_MYPROFILE_OUTBOX = "Lähetetyt"
 COM_KUNENA_MYPROFILE_PERSONAL_INFO = "Henkilötiedot"
-COM_KUNENA_MYPROFILE_PLUGIN_SETTINGS = "Profiili asetukset"
+COM_KUNENA_MYPROFILE_PLUGIN_SETTINGS = "Profiiliasetukset"
 COM_KUNENA_MYPROFILE_PRIVATE_MESSAGING = "Yksityisviestit"
 COM_KUNENA_MYPROFILE_SKYPE_DESC = "Skypen käsittelytunnus."
 COM_KUNENA_MYPROFILE_SUMMARY = "Yhteenveto"
