--- a/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.ini
+++ b/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.ini
@@ -423,10 +423,10 @@ COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Bon"
 COM_KUNENA_TOPIC_RATING_MEH = "Moyen"
 COM_KUNENA_TOPIC_RATING_KINDABAD = "Mauvais"
 COM_KUNENA_TOPIC_RATING_SUCKS = "Très mauvais"
-; COM_KUNENA_RATE_LOGIN = "You need to be logged in to rate topic"
+COM_KUNENA_RATE_LOGIN = "Vous devez être connecté pour noter le sujet"
 COM_KUNENA_RATE_NOT_YOURSELF = "Vous ne pouvez pas évaluer votre propre sujet"
-; COM_KUNENA_RATE_ALLREADY = "You have already rated this topic"
-; COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "Your rating has been successfully saved"
+COM_KUNENA_RATE_ALLREADY = "Vous avez déjà noté ce sujet"
+COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "Votre notation a bien été enregistré"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit_history.php
 
