--- a/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.views.ini
+++ b/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.views.ini
@@ -149,7 +149,7 @@ COM_KUNENA_VIEW_TOPICS_POSTS_MODE_THANKYOU = "Remerciements reçus"
 COM_KUNENA_VIEW_TOPICS_POSTS_MODE_UNAPPROVED = "Messages non approuvés"
 COM_KUNENA_VIEW_TOPICS_USERS_MODE_DEFAULT = "Mes sujets"
 COM_KUNENA_VIEW_TOPICS_USERS_MODE_FAVORITES = "Sujets favoris"
-COM_KUNENA_VIEW_TOPICS_USERS_MODE_POSTED = "Sujets participés"
+COM_KUNENA_VIEW_TOPICS_USERS_MODE_POSTED = "Sujets participé"
 COM_KUNENA_VIEW_TOPICS_USERS_MODE_STARTED = "Sujet démarrés"
 COM_KUNENA_VIEW_TOPICS_USERS_MODE_SUBSCRIPTIONS = "Abonnements aux sujets"
 
@@ -166,7 +166,7 @@ COM_KUNENA_USER_SHOWONLINE = "Afficher sa présence dans la liste des utilisateu
 COM_KUNENA_VIEW_USER_DEFAULT = "Profil de  %s"
 COM_KUNENA_VIEW_USER_EDIT_AUTH_FAILED = "Vous n'êtes pas autorisé à modifier l'utilisateur %s."
 COM_KUNENA_VIEW_USER_LIST = "Listes des utilisateurs"
-COM_KUNENA_LOGIN_SECRETKEY = "Clef secrete"
+COM_KUNENA_LOGIN_SECRETKEY = "Clef secrète"
 COM_KUNENA_USER_CANSUBSCRIBE = "Sélectionnez l'abonnement par défaut"
 COM_KUNENA_USER_USERLISTTIME = "Sélectionnez le délai horaire pour les pages"
 COM_KUNENA_USER_SETTINGS_CLEAR = "Vider le cache"
