--- a/src/components/com_kunena/language/it-IT/it-IT.com_kunena.controllers.ini
+++ b/src/components/com_kunena/language/it-IT/it-IT.com_kunena.controllers.ini
@@ -36,8 +36,8 @@ COM_KUNENA_MODERATE_APPROVE_SUCCESS = "Messaggi approvati con successo."
 COM_KUNENA_POST_NO_UNFAVORITED_TOPIC = "Questa discussione <b>NON</b> può essere rimossa dai tuoi preferiti."
 COM_KUNENA_POST_NO_UNSUBSCRIBED_TOPIC = "Questa discussione <b>NON</b> può essere rimossa dalle tue sottoscrizioni."
 COM_KUNENA_POST_SUCCESS_DELETE = "Il messaggio è stato eliminato con successo."
-; COM_KUNENA_ACTION_TOPIC_SUCCESS_MOVE = "The Topic has been successfully moved."
-; COM_KUNENA_ACTION_POST_SUCCESS_MOVE  = "The Post has been successfully moved."
+COM_KUNENA_ACTION_TOPIC_SUCCESS_MOVE = "Il messaggio è stato spostato con successo."
+COM_KUNENA_ACTION_POST_SUCCESS_MOVE  = "Il post è stato spostato con successo."
 COM_KUNENA_POST_SUCCESS_UNDELETE = "Il messaggio è stato ripristinato con successo."
 
 ; JROOT/components/com_kunena/controllers/topic.php
@@ -82,7 +82,7 @@ COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Hai cambiato il tuo voto!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Voti resettati con successo"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Hai inviato il tuo voto!"
 COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="Devi molti link nel messaggio, si prega di diminuirla!"
-; COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "You cannot put an URL in the subject of the topic or message."
+COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "Il Forum e' in Modalità di Sola Lettura."
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
@@ -92,7 +92,7 @@ COM_KUNENA_NO_MESSAGES_SELECTED = "Nessun messaggio selezionato"
 COM_KUNENA_NO_TOPICS_SELECTED = "Nessuna discussione selezionata"
 COM_KUNENA_USER_UNFAVORITE_YES = "Hai rimosso questa discussione dai Preferiti"
 COM_KUNENA_USER_UNSUBSCRIBE_YES = "Hai rimosso la sottoscrizione alla discussione."
-; COM_KUNENA_NO_MESSAGES_OR_TOPICS_SELECTED = "No topics or messages selected"
+COM_KUNENA_NO_MESSAGES_OR_TOPICS_SELECTED = "Nessun argomento o messaggi selezionati"
 
 ; JROOT/components/com_kunena/controllers/user.php
 
