--- a/src/components/com_kunena/language/it-IT/it-IT.com_kunena.views.ini
+++ b/src/components/com_kunena/language/it-IT/it-IT.com_kunena.views.ini
@@ -38,7 +38,7 @@ COM_KUNENA_PUBLISH = "Pubblica"
 COM_KUNENA_SELECT_BATCH_OPTION = "- Seleziona sequenza azioni -"
 COM_KUNENA_UNLOCK = "Sblocca"
 COM_KUNENA_UNPUBLISH = "De-pubblica"
-; COM_KUNENA_VIEW_CATEGORIES_DEFAULT = "Index"
+COM_KUNENA_VIEW_CATEGORIES_DEFAULT = "Index"
 COM_KUNENA_VIEW_CATEGORIES_INFO_EMPTY = "Non vi sono categorie pubblicate in %s."
 COM_KUNENA_VIEW_CATEGORIES_USER = "Categorie sottoscritte"
 COM_KUNENA_VIEW_CATEGORY_DEFAULT = "Discussioni in %s"
@@ -131,7 +131,7 @@ COM_KUNENA_LOGIN_OR = "o"
 ; JROOT/components/com_kunena/views/topics/
 
 COM_KUNENA_SHOW_ALL = "Tutto"
-; COM_KUNENA_WARNING_READONLY="The forum is in read only mode."
+COM_KUNENA_WARNING_READONLY="Il forum è in modalità di sola lettura."
 
 ; JROOT/components/com_kunena/views/topics/view.
 
