--- a/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.controllers.ini
+++ b/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.controllers.ini
@@ -36,8 +36,8 @@ COM_KUNENA_MODERATE_APPROVE_SUCCESS = "Mensagens aprovadas com sucesso."
 COM_KUNENA_POST_NO_UNFAVORITED_TOPIC = "Este tópico <strong>NÃO</strong> foi removido dos seus favoritos."
 COM_KUNENA_POST_NO_UNSUBSCRIBED_TOPIC = "Este tópico <strong>NÃO</strong> foi removido das suas subscrições."
 COM_KUNENA_POST_SUCCESS_DELETE = "A mensagem foi eliminada com sucesso."
-; COM_KUNENA_ACTION_TOPIC_SUCCESS_MOVE = "The Topic has been successfully moved."
-; COM_KUNENA_ACTION_POST_SUCCESS_MOVE  = "The Post has been successfully moved."
+COM_KUNENA_ACTION_TOPIC_SUCCESS_MOVE = "O tópico foi movido com sucesso."
+COM_KUNENA_ACTION_POST_SUCCESS_MOVE  = "A publicação foi movida com sucesso."
 COM_KUNENA_POST_SUCCESS_UNDELETE = "A mensagem foi restaurada com sucesso."
 
 ; JROOT/components/com_kunena/controllers/topic.php
@@ -92,7 +92,7 @@ COM_KUNENA_NO_MESSAGES_SELECTED = "Nenhuma mensagem selecionada"
 COM_KUNENA_NO_TOPICS_SELECTED = "Nenhum tópico selecionado"
 COM_KUNENA_USER_UNFAVORITE_YES = "Eliminou o tópico dos favoritos."
 COM_KUNENA_USER_UNSUBSCRIBE_YES = "A sua subscrição do tópico foi cancelada."
-; COM_KUNENA_NO_MESSAGES_OR_TOPICS_SELECTED = "No topics or messages selected"
+COM_KUNENA_NO_MESSAGES_OR_TOPICS_SELECTED = "Sem tópicos ou mensagens selecionadas"
 
 ; JROOT/components/com_kunena/controllers/user.php
 
