--- a/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.ini
+++ b/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.ini
@@ -423,10 +423,10 @@ COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Bom"
 COM_KUNENA_TOPIC_RATING_MEH = "Médio"
 COM_KUNENA_TOPIC_RATING_KINDABAD = "Mau"
 COM_KUNENA_TOPIC_RATING_SUCKS = "Muito mau"
-; COM_KUNENA_RATE_LOGIN = "You need to be logged in to rate topic"
+COM_KUNENA_RATE_LOGIN = "Você precisa de ter a sessão iniciada para avaliar o tópico"
 COM_KUNENA_RATE_NOT_YOURSELF = "Você não pode classificar o seu tópico"
-; COM_KUNENA_RATE_ALLREADY = "You have already rated this topic"
-; COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "Your rating has been successfully saved"
+COM_KUNENA_RATE_ALLREADY = "Você já avaliou este tópico"
+COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "A sua avaliação foi guardada com sucesso"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit_history.php
 
