--- a/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.templates.ini
@@ -375,20 +375,20 @@ COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Mostrar Instagram"
 COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Mostrar Instagram"
 COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Mostrar Soundcloud"
 COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Mostrar Soundcloud"
-; COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Very very small"
-; COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Very small"
-; COM_KUNENA_EDITOR_SIZE_SMALL = "Small"
-; COM_KUNENA_EDITOR_SIZE_NORMAL = "Normal"
-; COM_KUNENA_EDITOR_SIZE_BIG = "Big"
-; COM_KUNENA_EDITOR_SIZE_SUPER_BIGGER = "Bigger"
-; COM_KUNENA_EDITOR_COLOR_BLACK = "Black"
-; COM_KUNENA_EDITOR_COLOR_ORANGE = "Orange"
-; COM_KUNENA_EDITOR_COLOR_RED = "Red"
-; COM_KUNENA_EDITOR_COLOR_BLUE = "Blue"
-; COM_KUNENA_EDITOR_COLOR_PURPLE = "Purple"
-; COM_KUNENA_EDITOR_COLOR_GREEN = "Green"
-; COM_KUNENA_EDITOR_COLOR_WHITE = "White"
-; COM_KUNENA_EDITOR_COLOR_GRAY = "Gray"
+COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Muito muito pequeno"
+COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Muito pequeno"
+COM_KUNENA_EDITOR_SIZE_SMALL = "Pequeno"
+COM_KUNENA_EDITOR_SIZE_NORMAL = "Normal"
+COM_KUNENA_EDITOR_SIZE_BIG = "Grande"
+COM_KUNENA_EDITOR_SIZE_SUPER_BIGGER = "Muito grande"
+COM_KUNENA_EDITOR_COLOR_BLACK = "Preto"
+COM_KUNENA_EDITOR_COLOR_ORANGE = "Laranja"
+COM_KUNENA_EDITOR_COLOR_RED = "Vermelho"
+COM_KUNENA_EDITOR_COLOR_BLUE = "Azul"
+COM_KUNENA_EDITOR_COLOR_PURPLE = "Roxo"
+COM_KUNENA_EDITOR_COLOR_GREEN = "Verde"
+COM_KUNENA_EDITOR_COLOR_WHITE = "Branco"
+COM_KUNENA_EDITOR_COLOR_GRAY = "Cinzento"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
