--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -522,3 +522,5 @@ COM_KUNENA_EDITOR_HELPLINE_SMILIES = "Select a smiley in the list below or use e
 COM_KUNENA_BBCODE_CONFIDENTIAL_TEXT_GUESTS = "This message contains confidential information"
 COM_KUNENA_WRITEACCESS="Forum Access"
 COM_KUNENA_MODERATION_CHANGE_LABEL = "Change Label"
+COM_KUNENA_TEMPLATE_ICON_SET = "Default Icon Set"
+COM_KUNENA_TEMPLATE_ICON_SET_DESC = "Enter here the name of the default dir for icons"
