Hardcoded texts in the Log Manager #4281

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -1063,6 +1063,30 @@ COM_KUNENA_LOG_CLEAN_FROM_DAYS = "days"
 COM_KUNENA_LOG_POLL_MODERATE = "Moderate poll"
 COM_KUNENA_LOG_TOPIC_FAVORITE = "Favorite topic"
 COM_KUNENA_LOG_TOPIC_UNFAVORITE = "Unfavorite topic"
+COM_KUNENA_LOG_TIME_SORT_LABEL = "Time"
+COM_KUNENA_LOG_TYPE_SORT_LABEL = "Type"
+COM_KUNENA_LOG_USER_SORT_LABEL = "User"
+COM_KUNENA_LOG_CATEGORY_SORT_LABEL = "Category"
+COM_KUNENA_LOG_TOPIC_SORT_LABEL = "Topic"
+COM_KUNENA_LOG_TARGET_USER_SORT_LABEL = "Target User"
+COM_KUNENA_LOG_USER_FILTER_LABEL = "User"
+COM_KUNENA_LOG_CATEGORY_FILTER_LABEL = "Category"
+COM_KUNENA_LOG_TOPIC_FILTER_LABEL = "Topic"
+COM_KUNENA_LOG_TARGET_USER_FILTER_LABEL = "Target User"
+COM_KUNENA_LOG_IP_FILTER_LABEL = "IP"
+COM_KUNENA_LOG_GUESTS_FILTER_USERTYPE_LABEL = "Guests"
+COM_KUNENA_LOG_REGISTERED_FILTER_USERTYPE_LABEL = "Registered"
+COM_KUNENA_LOG_REGULAR_FILTER_USERTYPE_LABEL = "Regular"
+COM_KUNENA_LOG_MODERATORS_FILTER_USERTYPE_LABEL = "Moderators"
+COM_KUNENA_LOG_ADMINISTRATORS_FILTER_USERTYPE_LABEL = "Administrators"
+COM_KUNENA_LOG_MOD_AND_ADMIN_FILTER_USERTYPE_LABEL = "Mod and Admins"
+COM_KUNENA_LOG_ID_SORT_FIELD_LABEL = "ID"
+COM_KUNENA_LOG_TYPE_SORT_FIELD_LABEL = "Type (by id)"
+COM_KUNENA_LOG_USER_SORT_FIELD_LABEL = "User (by id)"
+COM_KUNENA_LOG_CATEGORY_SORT_FIELD_LABEL = "Category (by id)"
+COM_KUNENA_LOG_TOPIC_SORT_FIELD_LABEL = "Topic (by id)"
+COM_KUNENA_LOG_TARGET_USER_SORT_FIELD_LABEL = "Target User (by id)"
+COM_KUNENA_LOG_TIME_SORT_FIELD_LABEL = "Time (by id)"
 
 ; JROOT/administrator/components/com_kunena/views/statistics
 
