--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -288,7 +288,7 @@ COM_KUNENA_A_PUBWRITE="Allow Guests to Post/Write"
 COM_KUNENA_A_PUBWRITE_DESC="Set to <em>Yes</em> to allow Guests (non registered users e.a. public) write/post privileges. Set to <em>No</em> to force Guest access to be read-only."
 COM_KUNENA_A_RANKING="Ranking"
 COM_KUNENA_A_RANKINGIMAGES="Use Rank Images"
-COM_KUNENA_A_RANKINGIMAGES_DESC="Set to <em>Yes</em> if you want to show the rank registered users have using an image (from components/com_kunena/ranks). Turning this off will show the text for that rank. Check the documentation on docs.kunena.org for more information on ranking images."
+COM_KUNENA_A_RANKINGIMAGES_DESC="Set to <em>Yes</em> if you want to show the rank registered users have using an image (from media/kunena/ranks). Turning this off will show the text for that rank. Check the documentation on docs.kunena.org for more information on ranking images."
 COM_KUNENA_A_RANKING_DESC="Set to <em>Yes</em>, if you want to show the rank registered users have based on the number of posts they made.<br /><strong>Note: You must also enable <em>Show User Statistics</em> in the <em>Users</em> tab to show it.</strong>"
 COM_KUNENA_A_RANKING_SETTINGS="Ranking Settings"
 COM_KUNENA_A_RECAPTCHA_PRIVATEKEY="reCAPTCHA Private Key"
