--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -402,6 +402,10 @@ COM_KUNENA_EDITOR_MODAL_TITLE_CODE_SETTINGS="Code Settings"
 COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS="Picture Settings"
 COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_SIZE="Size"
 COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_ALT="Alt"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_SIZE_PLACEHOLDER="Enter the width of the image"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL_PLACEHOLDER="Enter the URL of the image"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_ALT_PLACEHOLDER="Enter the Alt of the image"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS="Link Settings"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL="URL"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT="Text"
