--- a/src/components/com_kunena/language/uk-UA/uk-UA.com_kunena.ini
+++ b/src/components/com_kunena/language/uk-UA/uk-UA.com_kunena.ini
@@ -135,8 +135,8 @@ COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Додати файли..."
 COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Перетягніть файли сюди або скористайтесь кнопкою завантаження"
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Не вдалось перемістити файл аватару до медіа-директорії"
 COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Перевищено  дозволений конфігурацією розмір файлу аватару "
-; COM_KUNENA_UPLOADED_LABEL_INSERT_ALL_BUTTON="Insert All"
-; COM_KUNENA_UPLOADED_LABEL_REMOVE_ALL_BUTTON="Remove All"
+COM_KUNENA_UPLOADED_LABEL_INSERT_ALL_BUTTON="Вставити всі"
+COM_KUNENA_UPLOADED_LABEL_REMOVE_ALL_BUTTON="Видалити всі"
 COM_KUNENA_UPLOAD_ERROR_FILE_EXCEED_LIMIT_IN_CONFIGURATION  = "Розмір вкладення перевищує допустимий"
 COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "Розміри зображення перевищують допустимі"
 
@@ -294,23 +294,23 @@ COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Профіль не збережено"
 COM_KUNENA_PROFILE_SAVE_ERROR="Помилка зберігання профілю"
 COM_KUNENA_THANKYOU_MORE_USERS = "і це користувач має %s інших подяк"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Теми, які потребують уваги"
-; COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Profile saved."
+COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Профіль збережено"
 COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Прикріпляти зображення можуть тільки модератори"
-; COM_KUNENA_TEAM_MEMBER="Team Member"
-; COM_KUNENA_X_TOPICS_0 = "No topics"
-; COM_KUNENA_X_TOPICS_1 = "%s topic"
-; COM_KUNENA_X_TOPICS_MORE = "%s topics"
+COM_KUNENA_TEAM_MEMBER="Член команди"
+COM_KUNENA_X_TOPICS_0 = "Жодної теми"
+COM_KUNENA_X_TOPICS_1 = "%s тем"
+COM_KUNENA_X_TOPICS_MORE = "%s тем"
 ; COM_KUNENA_BY_X = "by %s"
-; COM_KUNENA_FAVORITE = "Favorite"
-; COM_KUNENA_MYPOSTS = "Contains my posts"
+COM_KUNENA_FAVORITE = "Обране"
+COM_KUNENA_MYPOSTS = "Містить мої повідомлення"
 ; COM_KUNENA_TOPIC_STARTED_ON = "Topic started"
 ; COM_KUNENA_VIEW_NO_POSTS = "There are no posts in this category."
 ; COM_KUNENA_VIEW_NO_TOPICS = "There are no topics to display."
 COM_KUNENA_NEW_TOPIC = "Нова тема"
 COM_KUNENA_USERTYPE = "Тип користувача"
-; COM_KUNENA_X_VIEWS = "%d Views"
-; COM_KUNENA_X_POSTS = "%d Posts"
-; COM_KUNENA_X_THANKS = "%d Thanks"
+COM_KUNENA_X_VIEWS = "%d переглядів"
+COM_KUNENA_X_POSTS = "%d тем"
+COM_KUNENA_X_THANKS = "%d подяк"
 COM_KUNENA_EMAIL = "E-mail"
 ; COM_KUNENA_REPLYTO_X = "Reply to %s"
 
