--- a/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.views.ini
+++ b/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.views.ini
@@ -124,14 +124,14 @@ COM_KUNENA_REPLY_USER_REPLY_DISABLED = "Je kunt niet reageren op dit bericht"
 COM_KUNENA_SELECT_CATEGORY = "- Selecteer Categorie -"
 COM_KUNENA_VIEW_DISABLED = "Alleen ingelogde leden kunnen reageren."
 COM_KUNENA_VIEW_TOPICS_DEFAULT = "Onderwerp: %s"
-COM_KUNENA_VIEW_TOPIC_ERROR_LOOP = "Internal Error: Lus gevonden in verplaatste onderwerpen!"
-COM_KUNENA_LOGIN_PLEASE = "Please %s %s to join the conversation."
+COM_KUNENA_VIEW_TOPIC_ERROR_LOOP = "Interne fout: Looping gevonden in het verplaatsten van de onderwerpen!"
+COM_KUNENA_LOGIN_PLEASE = "Gelieve %s %s om te deelnemen aan het gesprek."
 COM_KUNENA_LOGIN_OR = "of"
 
 ; JROOT/components/com_kunena/views/topics/
 
 COM_KUNENA_SHOW_ALL = "Alle"
-COM_KUNENA_WARNING_READONLY="Het forum is alleen-lezen modus."
+COM_KUNENA_WARNING_READONLY="Het forum is in alleen-lezen modus."
 
 ; JROOT/components/com_kunena/views/topics/view.
 
@@ -167,6 +167,6 @@ COM_KUNENA_VIEW_USER_DEFAULT = "Profiel voor %s"
 COM_KUNENA_VIEW_USER_EDIT_AUTH_FAILED = "Je mag gebruiker %s niet bewerken."
 COM_KUNENA_VIEW_USER_LIST = "Gebruikerslijst"
 COM_KUNENA_LOGIN_SECRETKEY = "Secret key"
-COM_KUNENA_USER_CANSUBSCRIBE = "Selecteer abonnementen als staard"
+COM_KUNENA_USER_CANSUBSCRIBE = "Selecteer abonnementen als staardaard"
 COM_KUNENA_USER_USERLISTTIME = "selecteer de tijd limiet voor de pagina's"
 COM_KUNENA_USER_SETTINGS_CLEAR = "Cache legen"
