--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -1087,6 +1087,7 @@ COM_KUNENA_LOG_CATEGORY_SORT_FIELD_LABEL = "Category (by id)"
 COM_KUNENA_LOG_TOPIC_SORT_FIELD_LABEL = "Topic (by id)"
 COM_KUNENA_LOG_TARGET_USER_SORT_FIELD_LABEL = "Target User (by id)"
 COM_KUNENA_LOG_TIME_SORT_FIELD_LABEL = "Time (by id)"
+PLG_KUNENA_COMPROFILER_NO_GROUPS_FOUND="No groups found"
 
 ; JROOT/administrator/components/com_kunena/views/statistics
 
