--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -540,6 +540,8 @@ COM_KUNENA_CONFIGURATION_ATTACHMENT_FILENAME_UTF8 = "Enable utf8 characters on a
 COM_KUNENA_CONFIGURATION_ATTACHMENT_FILENAME_UTF8_DESC = "Enable utf8 characters on attachments filename which are uploaded on the server."
 COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD = "Auto Embed Soundcloud items"
 COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD_DESC = "Set to Yes if you want Soundcloud items to get automatically embedded."
+COM_KUNENA_EMAIL_HEADER="Email Header Image"
+COM_KUNENA_EMAIL_HEADER_DESC="Enter the path to your email header. Start with a <em>/</em> , default = <em>/media/kunena/email/hero-wide.png</em> "
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
