--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -529,3 +529,4 @@ COM_KUNENA_MODERATION_CHANGE_LABEL = "Change Label"
 COM_KUNENA_TEMPLATE_ICON_SET = "Default Icon Set"
 COM_KUNENA_TEMPLATE_ICON_SET_DESC = "Enter here the name of the default dir for icons"
 COM_KUNENA_MODERATION_TARGET_TOPIC_ID="Target Topic ID"
+COM_KUNENA_DONATE="Donate:"
