Add 2 new features to backend

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -545,6 +545,8 @@ COM_KUNENA_EMAIL_HEADER_DESC="Enter the path to your email header image. Start w
 COM_KUNENA_A_LABELS_MANAGER="Labels"
 COM_KUNENA_A_ICONS_MANAGER="Icons"
 COM_KUNENA_A_EMAIL_MANAGER="Email"
+COM_KUNENA_A_BLOCKIP_MANAGER="Block IPs"
+COM_KUNENA_A_BADWORDS_MANAGER="Bad Words"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
