--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -313,6 +313,7 @@ COM_KUNENA_X_POSTS = "%d Posts"
 COM_KUNENA_X_THANKS = "%d Thanks"
 COM_KUNENA_EMAIL = "E-Mail"
 COM_KUNENA_REPLYTO_X = "Reply to %s"
+COM_KUNENA_X_MESSAGES_MORE = "%s messages"
 
 COM_KUNENA_X_HIDDEN = "%d hidden"
 COM_KUNENA_SEE_ALL_SUBJECTS = "See Complete List of Subjects"
