Add option to disable signatures #4399

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -547,6 +547,8 @@ COM_KUNENA_A_ICONS_MANAGER = "Icons"
 COM_KUNENA_A_EMAIL_MANAGER = "Email"
 COM_KUNENA_A_BLOCKIP_MANAGER = "Block IPs"
 COM_KUNENA_A_BADWORDS_MANAGER = "Bad Words"
+COM_KUNENA_A_SIGNATURES="Signatures"
+COM_KUNENA_A_SIGNATURES_DESC="Allow signatures"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
