--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -549,6 +549,10 @@ COM_KUNENA_A_BLOCKIP_MANAGER = "Block IPs"
 COM_KUNENA_A_BADWORDS_MANAGER = "Bad Words"
 COM_KUNENA_A_SIGNATURES="Signatures"
 COM_KUNENA_A_SIGNATURES_DESC="Allow signatures"
+COM_KUNENA_A_PERSONAL="Personal"
+COM_KUNENA_A_PERSONAL_DESC="Allow personal message"
+COM_KUNENA_A_SOCIAL="Social"
+COM_KUNENA_A_SOCIAL_DESC="Allow social providers"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
