Can't search by specific date #4465

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -246,6 +246,7 @@ COM_KUNENA_SEARCH_SORTBY_VIEWS = "Number of views"
 COM_KUNENA_TOGGLER_COLLAPSE = "Collapse"
 COM_KUNENA_TOGGLER_EXPAND = "Expand"
 COM_KUNENA_USRL_SEARCH = "Find user"
+COM_KUNENA_SEARCH_AT_A_SPECIFIC_DATE = "Search at a specific date"
 
 COM_KUNENA_ALERT_WARNING_X = "Warning: %s"
 COM_KUNENA_ALERT_ERROR_X = "Error: %s"
