Lazy load images #137

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -553,6 +553,8 @@ COM_KUNENA_A_PERSONAL="Personal"
 COM_KUNENA_A_PERSONAL_DESC="Allow personal message"
 COM_KUNENA_A_SOCIAL="Social"
 COM_KUNENA_A_SOCIAL_DESC="Allow social providers"
+COM_KUNENA_A_LAZYLOAD="LazyLoad"
+COM_KUNENA_A_LAZYLOAD_DESC="Enable Lazyload for quicker page view. This will not load the images until the picture are in the screen position."
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
