Feature: Optional username display #23

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -778,6 +778,8 @@ COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC = "Select color for categories icon
 COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW = "Select color for NEW icon and text"
 COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC = "Select color for NEW icon and text"
 COM_KUNENA_EDITOR_TAB_WRITE_LABEL = "Write"
+COM_KUNENA_TEMPLATE_DISPLAY_OPTIONAL_USERNAME = "Optional Username"
+COM_KUNENA_TEMPLATE_DISPLAY_OPTIONAL_USERNAME_DESC = "Show optinal username on profilebox"
 
 ; JROOT/administrator/components/com_kunena/views/templates/tmpl/editcss.php
 
