Add language key for city desc

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -396,6 +396,7 @@ COM_KUNENA_EDITOR_MODAL_TITLE_MAP_SETTINGS="Map Settings"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TYPE="Type"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Zoom level"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY="City"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY_DESC="e.g. New York"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Hybrid"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ROADMAP="Roadmap"
 COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TERRAIN="Terrain"
