Add language key for confidential (Admin)

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -729,6 +729,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
 COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
 COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show video"
 COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL = "Show confidential"
+COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL_DESC = "Show confidential on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
