--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -377,6 +377,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Show Soundcloud"
 COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Show Soundcloud"
 COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL = "Show confidential"
 COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL_DESC = "Show confidential on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_HR = "Show HR"
+COM_KUNENA_TEMPLATE_DISPLAY_HR_DESC = "Show HR on editor"
 COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Very very small"
 COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Very small"
 COM_KUNENA_EDITOR_SIZE_SMALL = "Small"
