Add some language keys

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -147,8 +147,11 @@ COM_KUNENA_ADMIN_RSS_SETTINGS="RSS Settings"
 COM_KUNENA_ALLOW_USERNAME_CHANGE="Allow Username Changes"
 COM_KUNENA_ALLOW_USERNAME_CHANGE_DESC="Allow users to change their username from the profile page."
 COM_KUNENA_AVATAR_QUALITY="Avatar Quality"
+COM_KUNENA_AVATAR_QUALITY_DESC="Reduce or increase the quality of avatars. Default value is 75"
 COM_KUNENA_AVATAR_RESIZE_METHOD="Avatar Resize Method"
+COM_KUNENA_AVATAR_RESIZE_METHOD_DESC="Choose a method to resize avatar. Default value is interpolation (Better - Fast)"
 COM_KUNENA_AVATAR_CROP="Avatar Cropping"
+COM_KUNENA_AVATAR_CROP_DESC="Choose if you want to crop the avatar or not. Default value is NO"
 COM_KUNENA_RESIZE_RESIZE="Resize (Basic - Faster)"
 COM_KUNENA_RESIZE_INTERPOLATION="Interpolation (Better - Fast)"
 COM_KUNENA_RESIZE_BICUBIC="Bicubic (Best - Slower)"
@@ -171,6 +174,7 @@ COM_KUNENA_A_AVATARUPLOAD="Allow Avatar Upload"
 COM_KUNENA_A_AVATARUPLOAD_DESC="Set to <em>Yes</em> if you want registered users to be able to upload an avatar."
 COM_KUNENA_A_AVATAR_SETTINGS="Avatar Settings"
 COM_KUNENA_A_AVSIZE="Max. Avatar File Size"
+COM_KUNENA_A_AVSIZE_DESC="Maximum file size allowed for an avatar. Default value is 2048 KB"
 COM_KUNENA_A_BASICS="General"
 COM_KUNENA_A_BBCODE="BBCode"
 COM_KUNENA_A_BBCODE_SETTINGS="BBCode Settings"
