--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -379,6 +379,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL = "Show confidential"
 COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL_DESC = "Show confidential on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_HR = "Show HR"
 COM_KUNENA_TEMPLATE_DISPLAY_HR_DESC = "Show HR on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_LISTITEM = "Show list item"
+COM_KUNENA_TEMPLATE_DISPLAY_LISTITEM_DESC = "Show list item on editor"
 COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Very very small"
 COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Very small"
 COM_KUNENA_EDITOR_SIZE_SMALL = "Small"
