Add keys for list item (Admin)

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -737,6 +737,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL = "Show confidential"
 COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL_DESC = "Show confidential on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_HR = "Show HR"
 COM_KUNENA_TEMPLATE_DISPLAY_HR_DESC = "Show HR on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_LISTITEM = "Show list item"
+COM_KUNENA_TEMPLATE_DISPLAY_LISTITEM_DESC = "Show list item on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
