--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -381,6 +381,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_HR = "Show HR"
 COM_KUNENA_TEMPLATE_DISPLAY_HR_DESC = "Show HR on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_LISTITEM = "Show list item"
 COM_KUNENA_TEMPLATE_DISPLAY_LISTITEM_DESC = "Show list item on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SUPERSCRIPT = "Show <strong>Superscript</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_SUPERSCRIPT_DESC = "Show <strong>Superscript</strong> button on editor"
 COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Very very small"
 COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Very small"
 COM_KUNENA_EDITOR_SIZE_SMALL = "Small"
