add string for numbering

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -385,6 +385,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_SUPERSCRIPT = "Show <strong>Superscript</strong> but
 COM_KUNENA_TEMPLATE_DISPLAY_SUPERSCRIPT_DESC = "Show <strong>Superscript</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_SUBSCRIPT = "Show <strong>Subscript</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_SUBSCRIPT_DESC = "Show <strong>Subscript</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING = "Show <strong>Numbering</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING_DESC = "Show <strong>Numbering</strong> button on editor"
 COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Very very small"
 COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Very small"
 COM_KUNENA_EDITOR_SIZE_SMALL = "Small"
