bullets string (admin)

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -745,6 +745,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_SUBSCRIPT = "Show <strong>Subscript</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_SUBSCRIPT_DESC = "Show <strong>Subscript</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING = "Show <strong>Numbering</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING_DESC = "Show <strong>Numbering</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_BULLETS = "Show <strong>Bullets</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_BULLETS_DESC = "Show <strong>Bullets</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
