Messages per page for search results has a conflict with the search options #4557

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -93,6 +93,7 @@ COM_KUNENA_SEARCH_LIMIT10 = "Show 10 Search Results"
 COM_KUNENA_SEARCH_LIMIT15 = "Show 15 Search Results"
 COM_KUNENA_SEARCH_LIMIT20 = "Show 20 Search Results"
 COM_KUNENA_SEARCH_LIMIT5 = "Show 5 Search Results"
+COM_KUNENA_SEARCH_LIMIT = "Show %s Search Results"
 COM_KUNENA_SEARCH_SEARCHIN_ALLCATS = "All Categories"
 COM_KUNENA_SEARCH_SEARCH_POSTS = "Search entire posts"
 COM_KUNENA_SEARCH_SEARCH_TITLES = "Search titles only"
