strings for align right, align left and center

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -389,6 +389,12 @@ COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING = "Show <strong>Numbering</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING_DESC = "Show <strong>Numbering</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_BULLETS = "Show <strong>Bullets</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_BULLETS_DESC = "Show <strong>Bullets</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNRIGHT = "Show <strong>Align Right</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNRIGHT_DESC = "Show <strong>Align Right</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNLEFT = "Show <strong>Align Left</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNLEFT_DESC = "Show <strong>Align Left</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_CENTER = "Show <strong>Center</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_CENTER_DESC = "Show <strong>Center</strong> button on editor"
 COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Very very small"
 COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Very small"
 COM_KUNENA_EDITOR_SIZE_SMALL = "Small"
