string: align right, align left and center (admin)

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -747,6 +747,12 @@ COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING = "Show <strong>Numbering</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING_DESC = "Show <strong>Numbering</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_BULLETS = "Show <strong>Bullets</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_BULLETS_DESC = "Show <strong>Bullets</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNRIGHT = "Show <strong>Align Right</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNRIGHT_DESC = "Show <strong>Align Right</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNLEFT = "Show <strong>Align Left</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNLEFT_DESC = "Show <strong>Align Left</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_CENTER = "Show <strong>Center</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_CENTER_DESC = "Show <strong>Center</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
