--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -753,6 +753,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_ALIGNLEFT = "Show <strong>Align Left</strong> button
 COM_KUNENA_TEMPLATE_DISPLAY_ALIGNLEFT_DESC = "Show <strong>Align Left</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_CENTER = "Show <strong>Center</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_CENTER_DESC = "Show <strong>Center</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE = "Show <strong>Underline</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE_DESC = "Show <strong>Underline</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
