--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -755,6 +755,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_CENTER = "Show <strong>Center</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_CENTER_DESC = "Show <strong>Center</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE = "Show <strong>Underline</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE_DESC = "Show <strong>Underline</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_ITALIC = "Show <strong>Italic</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_ITALIC_DESC = "Show <strong>Italic</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
