--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -399,6 +399,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE = "Show <strong>Underline</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE_DESC = "Show <strong>Underline</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_ITALIC = "Show <strong>Italic</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_ITALIC_DESC = "Show <strong>Italic</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_BOLD = "Show <strong>Bold</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_BOLD_DESC = "Show <strong>Bold</strong> button on editor"
 COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Very very small"
 COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Very small"
 COM_KUNENA_EDITOR_SIZE_SMALL = "Small"
