bold string (admin)

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -757,6 +757,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE = "Show <strong>Underline</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE_DESC = "Show <strong>Underline</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_ITALIC = "Show <strong>Italic</strong> button"
 COM_KUNENA_TEMPLATE_DISPLAY_ITALIC_DESC = "Show <strong>Italic</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_BOLD = "Show <strong>Bold</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_BOLD_DESC = "Show <strong>Bold</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
