--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -405,6 +405,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_STRIKETHROUGH = "Show <strong>Strikethrough</strong>
 COM_KUNENA_TEMPLATE_DISPLAY_STRIKETHROUGH_DESC = "Show <strong>Strikethrough</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_COLORS = "Show <strong>Colors</strong> drop menu"
 COM_KUNENA_TEMPLATE_DISPLAY_COLORS_DESC = "Show <strong>Colors</strong> drop menu on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SIZE = "Show <strong>Size</strong> drop menu"
+COM_KUNENA_TEMPLATE_DISPLAY_SIZE_DESC = "Show <strong>Size</strong> drop menu on editor"
 COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Very very small"
 COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Very small"
 COM_KUNENA_EDITOR_SIZE_SMALL = "Small"
