--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -763,6 +763,8 @@ COM_KUNENA_TEMPLATE_DISPLAY_STRIKETHROUGH = "Show <strong>Strikethrough</strong>
 COM_KUNENA_TEMPLATE_DISPLAY_STRIKETHROUGH_DESC = "Show <strong>Strikethrough</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_COLORS = "Show <strong>Colors</strong> drop menu"
 COM_KUNENA_TEMPLATE_DISPLAY_COLORS_DESC = "Show <strong>Colors</strong> drop menu on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SIZE = "Show <strong>Size</strong> drop menu"
+COM_KUNENA_TEMPLATE_DISPLAY_SIZE_DESC = "Show <strong>Size</strong> drop menu on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
 COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
