--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -181,6 +181,7 @@ COM_KUNENA_A_BBCODE_SETTINGS="BBCode Settings"
 COM_KUNENA_A_BOARD_OFFLINE="Forum Offline"
 COM_KUNENA_A_BOARD_OFFLINE_DESC="Set to <em>Yes</em> if you want to take the forum offline. The forum will still remain operational for site Super Administrators."
 COM_KUNENA_A_BOARD_OFFLINE_MES="Forum Offline Message"
+COM_KUNENA_A_BOARD_OFFLINE_MES_DESC="Insert here the custom message to show when the forum is offline."
 COM_KUNENA_A_BOARD_TITLE="Forum Title"
 COM_KUNENA_A_BOARD_TITLE_DESC="The name of your forum"
 COM_KUNENA_A_CAPTCHA_CONFIGURATION="CAPTCHA Configuration"
