--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -411,7 +411,9 @@ COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL_PLACEHOLDER="Enter the URL of
 COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_ALT_PLACEHOLDER="Enter the Alt of the image"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS="Link Settings"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL_PLACEHOLDER="https://example.com"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT="Text"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT_PLACEHOLDER="Link title"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_SIZE="Size"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_WIDTH="Width"
 COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_HEIGHT="Height"
