--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -292,3 +292,4 @@ COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
 COM_KUNENA_THANKYOU_MORE_USERS = "and this user have %s others thankyou"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
 COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Posting image files is allowed only for moderators"
+COM_KUNENA_DONATE="Donate"
