Messages per page for search results has a conflict with the search options #4557 #4567 Port K50

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -89,6 +89,7 @@ COM_KUNENA_SEARCH_DATE_OLDER = "And older"
 COM_KUNENA_SEARCH_DATE_WEEK = "A week ago"
 COM_KUNENA_SEARCH_DATE_YEAR = "A year ago"
 COM_KUNENA_SEARCH_DATE_YESTERDAY = "Yesterday"
+COM_KUNENA_SEARCH_LIMIT = "Show %s Search Results"
 COM_KUNENA_SEARCH_LIMIT10 = "Show 10 Search Results"
 COM_KUNENA_SEARCH_LIMIT15 = "Show 15 Search Results"
 COM_KUNENA_SEARCH_LIMIT20 = "Show 20 Search Results"
