Add desc and maxlength to description field (backend) #4615  Port K50

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -46,6 +46,7 @@ COM_KUNENA_CHECKEDOUT = "Check Out"
 COM_KUNENA_CLASS_SFX = "Category CSS Class Suffix"
 COM_KUNENA_CLASS_SFXDESC = "CSS suffixes applied to index, showcat, view, and allow for different designs per category."
 COM_KUNENA_DESCRIPTIONADD = "Description:"
+COM_KUNENA_DESCRIPTIONADD_DESC="A description to show in forum index and meta description."
 COM_KUNENA_EDIT = "Edit"
 COM_KUNENA_EDITOR_INSERT = "Insert"
 COM_KUNENA_EDITOR_IN_MESSAGE = "In Message"
