Encourage guest user to login or register #4617  Port K50

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -128,6 +128,7 @@ COM_KUNENA_VIEW_TOPICS_DEFAULT = "Topic: %s"
 COM_KUNENA_VIEW_TOPIC_ERROR_LOOP = "Internal Error: Loop detected in moved topics!"
 COM_KUNENA_LOGIN_PLEASE = "Please %s %s to join the conversation."
 COM_KUNENA_LOGIN_OR = "or"
+COM_KUNENA_LOGIN_PLEASE_SKIP = "Please %s %s to skip this step."
 
 ; JROOT/components/com_kunena/views/topics/
 
