--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -547,6 +547,19 @@ COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD = "Auto Embed Soundcloud items"
 COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD_DESC = "Set to Yes if you want Soundcloud items to get automatically embedded."
 COM_KUNENA_EMAIL_HEADER="Email Header Image"
 COM_KUNENA_EMAIL_HEADER_DESC="Enter the path to your email header image. Start with a <em>/</em> , default = <em>/media/kunena/email/hero-wide.png</em> "
+COM_KUNENA_A_LABELS_MANAGER = "Labels"
+COM_KUNENA_A_ICONS_MANAGER = "Icons"
+COM_KUNENA_A_EMAIL_MANAGER = "Email"
+COM_KUNENA_A_BLOCKIP_MANAGER = "Block IPs"
+COM_KUNENA_A_BADWORDS_MANAGER = "Bad Words"
+COM_KUNENA_A_SIGNATURES="Signatures"
+COM_KUNENA_A_SIGNATURES_DESC="Allow signatures"
+COM_KUNENA_A_PERSONAL="Personal"
+COM_KUNENA_A_PERSONAL_DESC="Allow personal message"
+COM_KUNENA_A_SOCIAL="Social"
+COM_KUNENA_A_SOCIAL_DESC="Allow social providers"
+COM_KUNENA_A_LAZYLOAD="LazyLoad"
+COM_KUNENA_A_LAZYLOAD_DESC="Enable Lazyload for quicker page view. This will not load the images until the picture are in the screen position."
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
