--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -547,6 +547,8 @@ COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD = "Auto Embed Soundcloud items"
 COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD_DESC = "Set to Yes if you want Soundcloud items to get automatically embedded."
 COM_KUNENA_EMAIL_HEADER="Email Header Image"
 COM_KUNENA_EMAIL_HEADER_DESC="Enter the path to your email header image. Start with a <em>/</em> , default = <em>/media/kunena/email/hero-wide.png</em> "
+COM_KUNENA_CONFIGURATION_USER_STATUS="Show User Status"
+COM_KUNENA_CONFIGURATION_USER_STATUS_DESC="Show the user status on the profile"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
