--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -668,7 +668,7 @@ COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title len
 COM_KUNENA_TEMPLATE_RECOVER="Recover crash and store fields"
 COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remember the data from your messages, on crashes or move data from quickreply to editor"
 COM_KUNENA_TEMPLATE_DEFAULT_ICON="Default category icon"
-COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is icon-folder"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is *-folder. You can't mix 2 types of icons. Please use an icon by the iconset, set by <em>topic icons</em> option"
 COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Select color for categories icons"
 COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
 COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
