--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -546,7 +546,7 @@ COM_KUNENA_CONFIGURATION_ATTACHMENT_FILENAME_UTF8_DESC = "Enable utf8 characters
 COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD = "Auto Embed Soundcloud items"
 COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD_DESC = "Set to Yes if you want Soundcloud items to get automatically embedded."
 COM_KUNENA_EMAIL_HEADER="Email Header Image"
-COM_KUNENA_EMAIL_HEADER_DESC="Enter the path to your email header image. Start with a <em>/</em> , default = <em>/media/kunena/email/hero-wide.png</em> "
+COM_KUNENA_EMAIL_HEADER_DESC="Enter the path to your email header image. Start with a <em>/</em> , default = <em>/media/kunena/email/hero-wide.png</em>. Leave empty for no image."
 COM_KUNENA_CONFIGURATION_USER_STATUS="Show User Status"
 COM_KUNENA_CONFIGURATION_USER_STATUS_DESC="Show the user status on the profile"
 
