Add option to disable user status #4763  Port K50

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -560,6 +560,8 @@ COM_KUNENA_A_SOCIAL = "Social"
 COM_KUNENA_A_SOCIAL_DESC = "Allow social providers"
 COM_KUNENA_A_LAZYLOAD = "LazyLoad"
 COM_KUNENA_A_LAZYLOAD_DESC = "Enable Lazyload for quicker page view. This will not load the images until the picture are in the screen position."
+COM_KUNENA_CONFIGURATION_USER_STATUS="Show User Status"
+COM_KUNENA_CONFIGURATION_USER_STATUS_DESC="Show the user status on the profile"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
